# MedGenomics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  medgenomics.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
scripts/: bulk_seed.py
src/: main.py
static/: analytics.html  dashboard.html  genomic-records.html  index.html  inventory.html  login.html  patient-pool.html  register.html
tests/: conftest.py  test_main.py
